test/tests/errors/error-function-incorrect-param.sm
// true
// false
// false
/**/
/**/

program {
    func x(a: int, b: int): string {
        "t"
    }

    output x(4);
}